--- a/app/src/main/res/layout/activity_atur_penjualan_part_.xml
+++ b/app/src/main/res/layout/activity_atur_penjualan_part_.xml
@@ -55,6 +55,7 @@
                 android:layout_height="wrap_content">
 
                 <android.support.design.widget.TextInputLayout
+                    android:id="@+id/tl_nohp"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
