--- a/app/src/main/res/layout/activity_atur_terima_part.xml
+++ b/app/src/main/res/layout/activity_atur_terima_part.xml
@@ -54,7 +54,8 @@
                     android:layout_weight="1"
                     android:entries="@array/tipe_supplier"
                     android:gravity="center"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:focusable="true"/>
 
             </LinearLayout>
 
@@ -174,7 +175,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:entries="@array/pembayaran"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:focusable="true"/>
 
             </LinearLayout>
 
@@ -202,7 +204,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:focusable="true"/>
 
             </LinearLayout>
 
