--- a/app/src/main/res/layout/item_suggestion.xml
+++ b/app/src/main/res/layout/item_suggestion.xml
@@ -28,9 +28,8 @@
         android:layout_height="wrap_content"
         android:maxLines="1"
         android:singleLine="true"
-        android:textStyle="bold"
-        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-        android:textColor="@color/grey_80" />
+        android:textSize="12sp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
 
     <TextView
         android:id="@+id/title2"
@@ -38,10 +37,9 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="6dp"
         android:maxLines="1"
+        android:textSize="12sp"
         android:singleLine="true"
-        android:textStyle="bold"
-        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-        android:textColor="@color/grey_80" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
 
     <View
         android:layout_width="@dimen/spacing_large"
