--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -86,6 +86,7 @@
     </string-array>
 
     <string-array name="jenis_kelamin">
+        <item>--PILIH--</item>
         <item>LAKI - LAKI</item>
         <item>PEREMPUAN</item>
     </string-array>
