--- a/app/src/main/res/layout/activity_form_login.xml
+++ b/app/src/main/res/layout/activity_form_login.xml
@@ -158,6 +158,15 @@
 
 
                     </LinearLayout>
+                    <TextView
+                        android:id="@+id/otp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:layout_gravity="center"
+                        android:textStyle="bold"
+                        android:textSize="15sp"/>
 
                 </LinearLayout>
 
