--- a/app/src/main/res/layout/activity_form_login.xml
+++ b/app/src/main/res/layout/activity_form_login.xml
@@ -18,7 +18,7 @@
             android:id="@+id/imageView2"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            app:srcCompat="@drawable/logo" />
+            app:srcCompat="@drawable/speed" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -31,7 +31,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Login"
+                android:text="Bengkel Pro"
                 android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                 android:textColor="@android:color/white"
                 android:textStyle="bold" />
@@ -40,7 +40,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="Otomotives"
+                android:text="Login"
                 android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                 android:textColor="@android:color/white" />
         </LinearLayout>
@@ -91,8 +91,8 @@
                             android:id="@+id/user"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="Email/Username"
-                            android:inputType="textEmailAddress"
+                            android:hint="Nomor Hanphone"
+                            android:inputType="phone"
                             android:maxLines="1"
                             android:singleLine="true" />
 
@@ -106,10 +106,10 @@
                             android:id="@+id/password"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="Password (optional)"
-
+                            android:hint="OTP"
+                            android:maxLength="6"
                             android:imeOptions="actionUnspecified"
-                            android:inputType="textPassword"
+                            android:inputType="number"
                             android:maxLines="1"
                             android:singleLine="true" />
 
@@ -119,7 +119,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:text="Remember me" />
+                        android:text="Remember me"
+                        android:visibility="invisible" />
 
                     <Button
                         android:id="@+id/email_sign_in_button"
