--- a/app/src/main/res/layout/activity_detail_part_diterima.xml
+++ b/app/src/main/res/layout/activity_detail_part_diterima.xml
@@ -89,7 +89,7 @@
 
                 </android.support.design.widget.TextInputLayout>
 
-                <ImageView
+                <ImageButton
                     android:id="@+id/img_scan_terimaPart"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
