--- a/app/src/main/res/layout/item_terima_part.xml
+++ b/app/src/main/res/layout/item_terima_part.xml
@@ -12,111 +12,110 @@
     android:layout_marginBottom="4dp"
     android:layout_weight="5"
     android:padding="10dp"
-    app:cardElevation="3dp"
-    app:cardCornerRadius="10dp">
+    app:cardCornerRadius="10dp"
+    app:cardElevation="3dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:orientation="vertical">
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="10dp"
+        android:stretchColumns="*">
 
-            <LinearLayout
+        <TableRow>
+
+            <TextView
+                android:id="@+id/txtTanggal"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:layout_height="wrap_content"
+                android:gravity="start"
+                android:padding="5dp"
+                android:text="Tanggal"
+                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Menu"
+                android:textColor="@color/grey_900" />
 
-                <LinearLayout
-                    android:layout_width="200sp"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
+            <TextView
+                android:id="@+id/txtNoDo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="end"
+                android:padding="5dp"
+                android:text="No. DO"
+                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                android:textColor="@color/grey_900"
+                android:textSize="12sp" />
 
-                    <TextView
-                        android:id="@+id/txtTanggal"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:padding="5dp"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                        android:textSize="12sp"
-                        android:text="Tanggal"
-                        android:gravity="start"/>
 
-                    <TextView
-                        android:id="@+id/txtSupplier"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                        android:textSize="12sp"                        android:padding="5dp"
-                        android:text="Supplier"
-                        android:gravity="start"/>
+        </TableRow>
 
-                    <TextView
-                        android:id="@+id/txtPembayaran"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:padding="5dp"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                        android:textSize="12sp"                        android:text="Pembayaran"
-                        android:gravity="start"/>
+        <TableRow android:layout_marginTop="@dimen/spacing_medium">
 
-                    <TextView
-                        android:id="@+id/txtTotal"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:padding="5dp"
-                        android:text="Total"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                        android:textSize="12sp"
-                        android:gravity="start"/>
+            <TextView
+                android:id="@+id/txtSupplier"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="start"
+                android:padding="5dp"
+                android:text="Supplier"
+                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                android:textColor="@color/grey_900"
+                android:textSize="12sp" />
 
-                </LinearLayout>
+        </TableRow>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
+        <TableRow android:layout_marginTop="@dimen/spacing_medium">
 
-                    <TextView
-                        android:id="@+id/txtNoDo"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:padding="5dp"
-                        android:text="No. DO"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                        android:textSize="12sp"
-                        android:gravity="end"/>
+            <TextView
+                android:id="@+id/txtPembayaran"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="start"
+                android:padding="5dp"
+                android:text="Pembayaran"
+                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                android:textColor="@color/grey_900"
+                android:textSize="12sp" />
 
-                    <TextView
-                        android:id="@+id/textView38"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:padding="5dp"/>
+            <TextView
+                android:id="@+id/txtJatuhTempo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="end"
+                android:padding="5dp"
+                android:text="Jatuh Tempo"
+                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                android:textColor="@color/grey_900"
+                android:textSize="12sp" />
 
-                    <TextView
-                        android:id="@+id/txtJatuhTempo"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Jatuh Tempo"
-                        android:padding="5dp"
-                        android:gravity="end"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                        android:textSize="12sp"/>
+        </TableRow>
 
-                    <TextView
-                        android:id="@+id/txtUser"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="User"
-                        android:padding="5dp"
-                        android:gravity="end"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                        android:textSize="12sp"/>
+        <TableRow android:layout_marginTop="@dimen/spacing_medium">
 
-                </LinearLayout>
+            <TextView
+                android:id="@+id/txtTotal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="start"
+                android:padding="5dp"
+                android:textColor="@color/grey_900"
+                android:text="Total"
+                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                android:textSize="12sp" />
 
-            </LinearLayout>
+            <TextView
+                android:id="@+id/tv_ongkir"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="end"
+                android:padding="5dp"
+                android:textColor="@color/grey_900"
+                android:text="Ongkir"
+                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                android:textSize="12sp" />
 
-        </LinearLayout>
+        </TableRow>
 
-    </android.support.v7.widget.CardView>
+    </TableLayout>
+
+</android.support.v7.widget.CardView>
 
