--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -1,99 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/tools"
+    android:id="@+id/cardView"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:layout_marginLeft="7dp"
+    android:layout_marginTop="4dp"
+    android:layout_marginRight="7dp"
+    android:layout_marginBottom="4dp"
+    android:padding="10dp"
+    app:cardCornerRadius="10dp"
+    app:cardElevation="2dp">
 
-    <android.support.v7.widget.CardView
-        android:layout_margin="5dp"
-        app:cardCornerRadius="6dp"
-        app:cardElevation="2dp"
+    <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:stretchColumns="*">
 
-        <LinearLayout
-            android:padding="7dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+        <TableRow>
 
-            <LinearLayout
-                android:layout_width="220dp"
+            <TextView
+                android:id="@+id/txtNamaKaryawan"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="top"
-                android:orientation="vertical">
+                android:maxLines="2"
+                android:text="Nama Karywan"
+                android:layout_gravity="start"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                android:textColor="@color/grey_900" />
 
-                    <TextView
-                        android:id="@+id/txtNamaKaryawan"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:maxLines="2"
-                        android:text="Nama Karywan"
-                        android:textSize="12sp"
-                        android:textStyle="bold" />
+        </TableRow>
 
-                    <TextView
-                        android:id="@+id/txtNoPonsel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/spacing_medium"
-                        android:textStyle="bold"
-                        android:text="Ponsel"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
+        <TableRow android:layout_marginTop="@dimen/spacing_medium">
 
-
-                    <TextView
-                        android:id="@+id/txtTglMasuk"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/spacing_medium"
-                        android:textStyle="bold"
-                        android:text="Tanggal Masuk"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="0dp"
+            <TextView
+                android:id="@+id/txtNoPonsel"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="top"
-                android:layout_weight="1"
-                android:orientation="vertical">
+                android:text="Ponsel"
+                android:layout_gravity="start"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                android:textColor="@color/grey_900" />
 
-                <TextView
-                    android:id="@+id/txtNopol"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:maxLines="2"
-                    android:text=""
-                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                    android:textColor="@color/grey_80"
-                    android:textSize="12sp"
-                    android:textStyle="bold" />
+            <TextView
+                android:id="@+id/txtPosisi"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Posisi"
+                android:layout_gravity="end"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                android:textColor="@color/grey_900" />
 
-                    <TextView
-                        android:id="@+id/txtPosisi"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/spacing_medium"
-                        android:text="Posisi"
-                        android:textStyle="bold"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
+        </TableRow>
 
+        <TableRow android:layout_marginTop="@dimen/spacing_medium">
 
-                    <TextView
-                        android:id="@+id/txtStatus"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/spacing_medium"
-                        android:text="Status"
-                        android:textStyle="bold"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
+            <TextView
+                android:id="@+id/tv_fungsiMekanik"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Fungsi Mekanik"
+                android:layout_gravity="start"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                android:textColor="@color/grey_900" />
 
-            </LinearLayout>
+            <TextView
+                android:id="@+id/txtStatus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Status"
+                android:layout_gravity="end"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                android:textColor="@color/grey_900" />
 
-        </LinearLayout>
+        </TableRow>
 
-    </android.support.v7.widget.CardView>
-</FrameLayout>
+    </TableLayout>
+
+</android.support.v7.widget.CardView>
